# digiplan

./: .coveragerc  .editorconfig  .gitignore  .jshintrc  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.txt  LICENSE  Makefile  README.md  README.rst  environment.yml  local.yml  manage.py  merge_local_dotenvs_in_dotenv.py  package-lock.json  package.json  production.yml  pyproject.toml  setup.cfg  vite.config.js
.envs/.local/: .django  .postgres
.github/workflows/: ci.yml
compose/local/django/: Dockerfile
compose/production/celery/: start
compose/production/django/: Dockerfile  start
compose/production/postgres/: Dockerfile  init.sql  initdb-postgis.sh
compose/production/traefik/: traefik.toml
config/: __init__.py  celery.py  schema.py  schemas.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  local.py  production.py  test.py
digiplan/: __init__.py  conftest.py
digiplan/data/: README.md
digiplan/data/scenarios/: README.md
digiplan/map/: __init__.py  apps.py  area.py  calculations.py  charts.py  choropleths.py  config.py  datapackage.py  forms.py  hooks.py  layers.py  managers.py  map_config.py  models.py  mvt.py  mvt_layers.py  popups.py  results.py  setup.py  urls.py  utils.py  views.py  widgets.py
digiplan/map/charts/: capacity.json  capacity_square.json  decentralized_centralized_heat.json  detailed_overview.json  elecricity_demand_capita.json  electricity_autarky.json  electricity_demand.json  electricity_ghg.json  electricity_overview.json  general_options.json  ghg_history.json  ghg_overview.json  ghg_reduction.json  heat_centralized.json  heat_decentralized.json  heat_demand.json  heat_demand_capita.json  mobility_ghg.json  mobility_overview.json  onboarding_pv_ground.json  onboarding_pv_roof.json  onboarding_wind.json  overview_heat.json  population.json  population_density.json  renewable_electricity_production.json  renewable_electricity_production_capita.json  renewable_electricity_production_square.json  wind_turbines.json  wind_turbines_square.json
digiplan/map/config/: config.py  parameters.json
digiplan/map/fixtures/: district.json  hospitals.json  hospitalssimulated.json  region.json
digiplan/map/mapset/: choropleth.py  layers.py  mvt_layers.py  popups.py  setup.py  sources.py  utils.py
digiplan/map/migrations/: 0001_initial.py  0002_auto_20210907_1242.py  0002_windturbine.py  0003_auto_20210910_1138.py  0003_windturbine_rotor_diameter.py  0004_alter_windturbine_hub_height.py  0004_auto_20210910_1155.py  0005_alter_windturbine_name_park.py  0005_auto_20210910_1204.py  0006_alter_windturbine_name.py  0006_auto_20211116_1004.py  0007_auto_20230118_1028.py  0007_hospitalssimulated.py  0008_pvroof.py  0009_auto_20230118_1157.py  0010_pvground.py  0011_biomass_combustion_hydro.py  0012_add_mun_id.py  0012_population.py  0013_alter_population_value.py  0013_alter_windturbine_mun_id.py  0013_population.py  0014_alter_population_value.py  0014_alter_windturbine_mun_id.py  0014_municipality_area.py  0015_municipality_area.py  0016_alter_windturbine_mun_id.py  0017_alter_windturbine_mun_id.py  0018_auto_20230307_1404.py  0019_airtraffic.py  0020_aviation.py  0021_biospherereserve.py  0022_drinkingwaterarea_faunaflorahabitat_floodplain_forest_grid_gsgk_industry_landscapeprotectionarea_les.py  0023_storage.py  0024_auto_20230706_1135.py  0025_auto_20230803_1017.py  0026_auto_20230803_1321.py  0027_auto_20230814_1028.py  0028_auto_20230814_1031.py  0029_auto_20230829_0626.py
digiplan/map/popups/: capacity.json  capacity_square.json  population.json  renewable_electricity_production.json
digiplan/map/results/: __init__.py  calculations.py  charts.py  core.py  hooks.py  visualizations.py
digiplan/map/templatetags/: helper_tags.py
digiplan/metadata/tests/: test_schema.py
digiplan/schema/popup/: schema.popup.default.json
digiplan/schemas/: atom.chart.example.json  atom.chart.schema.json  legend.example.json  legend.schema.json  popup.default.example.json  popup.default.schema.json  popup.example.json  popup.schema.json
digiplan/schemas/charts/: detailed_overview_option.json  general_options.json
digiplan/schemas/components/: chart.energy_consumption.example.json  chart.example.json  chart.schema.json  key-values.example.json  key-values.schema.json  sources.schema.json
digiplan/static/config/: additional_energy_settings_panel.json  additional_heat_settings_panel.json  additional_traffic_settings_panel.json  choropleth_styles.json  choropleths.json  color_sets.json  dependency_parameters.json  energy_settings_panel.json  heat_settings_panel.json  layer_styles.json  names.json  parameters.json  result_styles.json  settings_dependency_map.json  settings_parameters.json  traffic_settings_panel.json
digiplan/static/css/: mapbox-gl.css
digiplan/static/js/: basemaps.js  charts.js  elements.js  event-topics.js  filter.js  helper.js  init_map.js  intro_tour.js  layer.js  layers-box.js  legend.js  map.js  menu.js  offcanvas.js  popup.js  (+4 more)
digiplan/templates/: base.html  map.html
digiplan/users/: admin.py  apps.py  urls.py  views.py
digiplan/utils/: data_processing.py  distill.py  dump_fixtures.sh  load_fixtures.sh  ogr_layer_mapping.py
docs/: Makefile  about.rst  areas_and_potentials.rst  conf.py  data.rst  developer.rst  energy_system.rst  index.rst  installation_and_setup.rst  make.bat  scenarios_and_methods.rst  stemp.rst  tool_transfer.rst  usage.rst  usage_and_installation.rst  whats_new.rst
docs/api/: modules.rst
docs/pycharm/: configuration.rst
enershelf/map/: config.py  forms.py  layers.py  managers.py  models.py  mvt.py  mvt_layers.py  tests.py  urls.py  views.py  widgets.py
enershelf/templates/: base.html  map.html
enershelf/users/: apps.py
enershelf/utils/: data_processing.py  dump_fixtures.sh  load_fixtures.sh  load_gpkgs.py  ogr_layer_mapping.py
requirements/: base.txt  local.txt  production.txt
tests/: test_calculations.py  test_choropleths.py  test_datapackage.py  test_schema.py  test_schemas.py  test_urls.py  test_utils.py
tests/test_data/: choropleth_styles.json
(+225 files in other folders)
